--- a/vercel.json
+++ b/vercel.json
@@ -1,7 +1,7 @@
 {
   "builds": [
     {
-      "src": "main.py",
+      "src": "app.py",
       "use": "@vercel/python",
       "config": {
         "runtime": "python3.9" 
