--- a/requirements.txt
+++ b/requirements.txt
@@ -13,11 +13,11 @@ carvekit==4.1.2
 backgroundremover==0.2.7
 
 # Deep Learning
-# torch==2.1.2
-# torchvision==0.16.2
-
-torch>=2.2.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+torch==2.1.2
 torchvision==0.16.2
+
+# torch>=2.2.0+cpu --extra-index-url https://download.pytorch.org/whl/cpu
+# torchvision==0.16.2
 
 # Image Processing & Enhancement
 opencv-python==4.9.0.80
