--- a/vercel.json
+++ b/vercel.json
@@ -8,10 +8,11 @@
       }
     }
   ],
+  "installCommand": "pip3.9 install -r requirements.txt",
   "routes": [
     {
       "src": "/(.*)",
       "dest": "app.py"
     }
   ]
-}       
+}
